Mod: Version bump to 0.1.4

--- a/CHANGES
+++ b/CHANGES
@@ -1,3 +1,12 @@
+Version 0.1.4:
+ - Merge branch 'feature/fix_open' into develop
+ - Fix: open mode
+ - Merge branch 'release/v0.1.3' into develop
+ - Merge branch 'release/v0.1.3'
+ - Merge branch 'release/v0.1.2'
+ - Merge branch 'release/v0.1.1'
+ - Merge branch 'release/v0.1.0'
+
 Version 0.1.3:
  - Merge branch 'feature/fix_beautifulsoup_exception' into develop
  - Fix: catch all exceptions
