--- a/CHANGES
+++ b/CHANGES
@@ -1,3 +1,13 @@
+Version 0.1.5:
+ - Merge branch 'feature/fix_code' into develop
+ - Fix: coding
+ - Merge branch 'release/v0.1.4' into develop
+ - Merge branch 'release/v0.1.4'
+ - Merge branch 'release/v0.1.3'
+ - Merge branch 'release/v0.1.2'
+ - Merge branch 'release/v0.1.1'
+ - Merge branch 'release/v0.1.0'
+
 Version 0.1.4:
  - Merge branch 'feature/fix_open' into develop
  - Fix: open mode
