Mod: Version bump to 0.2.0

--- a/CHANGES
+++ b/CHANGES
@@ -1,3 +1,22 @@
+Version 0.2.0:
+ - Merge branch 'develop' of bitbucket.org:zqcode/zq_monitor into develop
+ - Add: 增加日志支持
+ - Merge branch 'release/v0.1.9'
+ - Merge branch 'master' of bitbucket.org:zqcode/zq_monitor
+ - Merge branch 'release/v0.1.8'
+ - README.rst edited online with Bitbucket
+ - README.rst edited online with Bitbucket
+ - README.rst edited online with Bitbucket
+ - README.rst edited online with Bitbucket
+ - Merge branch 'release/v0.1.7'
+ - Merge branch 'release/v0.1.6'
+ - Merge branch 'release/v0.1.5'
+ - Merge branch 'release/v0.1.4'
+ - Merge branch 'release/v0.1.3'
+ - Merge branch 'release/v0.1.2'
+ - Merge branch 'release/v0.1.1'
+ - Merge branch 'release/v0.1.0'
+
 Version 0.1.8:
  - Add: 就业指导中心
  - Merge branch 'release/v0.1.7' into develop
